--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@tabler/icons-react": "^3.26.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-motion": "^1.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "react-gridlines": "^1.1.7",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
